--- a/front-end5_2.html
+++ b/front-end5_2.html
@@ -5,70 +5,22 @@
 <body>
       <script>
 
-var num1 = 5;
-var num2 = 7;
-
 function f (a = 2, b = 3, c) {
+	function getSum () {
+  		return (a + b);
+	}
 
-  if (typeof(c) === "function") {
-  return c (num1, num2) / 2;
-  }
-}
-
-function getAvarage (a = 2, b = 3) {
-  return (a + b);
-}
-
-console.log(f(num1, num2, getAvarage));
-
-function getSum (a = 2, b = 3) {
-  return a + b;
-}
-
-console.log(getSum());
-
-  </script>
-</body>
-</html> 
-
-
-
-
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-</head>
-<body>
-      <script>
-
-var num1 = 5;
-var num2 = 7;
-
-function f (a = 2, b = 3, c) {
-function getSum (a = 2, b = 3) {
-  return a + b;
-}
-  if (typeof(c) === "function") {
+	if (typeof(c) === "function") {
   	return c();
-  }
-  return getSum();
+  	}
 
-  }
-
-
-function getAvarage (a=3, b=3) {
-
-  return (a + b) / 2;}
-
-
-
-console.log(f(num1, num2, 5));
-console.log(f(num1, num2, getAvarage));
+  	return getSum();
+}
+  	function getAvarage(a = 2, b = 3) {
+  		return (a + b)/2
+  	}
+console.log(f(3, 5, getAvarage));
+console.log(f());
 
   </script>
 </body>
